# mpc-waas

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: ci.yaml
app/: Cargo.toml
app/src/: main.rs
app/src/api/: auth.rs  mod.rs  users.rs  wallet.rs
app/src/auth/: jwt.rs  mod.rs  password.rs
app/src/config/: app_config.rs
app/src/db/migrations/: m20250517_093000_create_tbl_users.rs  m20250517_094000_create_tbl_wallets.rs  m20250517_095000_create_tbl_transactions.rs  mod.rs
app/src/db/models/: mod.rs  transaction.rs  user.rs  wallet.rs
app/src/db/repositories/: mod.rs  transaction_repository.rs  user_repository.rs  wallet_repository.rs
app/src/middleware/: auth.rs
app/src/utils/: mod.rs  request.rs  validate.rs
app/src/utils/validators/: user.rs
participant/: Cargo.toml
participant/src/: config.rs  keygen.rs  main.rs  signing.rs
proto/proto/: mpc.proto
proto/src/: lib.rs
sse/: Cargo.toml
sse/src/: main.rs
