[workspace]
resolver = "3"
members = ["proto", "app", "sse", "participant"]

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
tonic = "0.14.2"
prost = "0.14.1"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.145"
anyhow = "1.0.99"
thiserror = "2.0.16"
dotenv = "0.15.0"
serde = { version = "1.0.225", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
prost-types = "0.14.1"
futures = "0.3.31"
